<resources xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="UnusedResources">
	<string name="app_name">MHC</string>
	<string name="action_close">Close</string>
	<string name="action_security">Security</string>
	<string name="action_solar">Solar Panel</string>
	<string name="action_aircon">Aircon</string>
	<string name="action_selAlarm">Select Alarm sound</string>
	<string name="action_selWarning">Select Solar sound</string>
	<string name="action_refresh">Clear devices</string>
	<string name="action_location">Locations</string>
	<string name="action_debug">Show debug messages</string>
	<string name="action_debug_off">Hide debug messages</string>
	<string name="action_devDebug">Device Debug</string>
	<string name="action_syncSolar">Update solar data</string>

	<string name="msg_listener">MyHomeControl is listening to Home Control Devices</string>
	<string name="err_no_esp">No SPM not found. Make sure it is switched on and is connected to the same WiFi network.</string>
	<string name="err_esp">Communication with SPM failed. Make sure it is switched on and is connected to the same WiFi network.</string>
	<string name="err_spMonitor">spMonitor device is offline</string>
	<string name="err_aircon">All aircon devices are offline</string>
	<string name="err_gallery">Communication with image gallery failed. Make sure you have internet connection.</string>
	<string name="err_cctv">Communication with cctv server failed. Make sure it is switched on and is connected to the same WiFi network.</string>
	<string name="snd_alarm">Alarm</string>
	<string name="snd_alert">Alert</string>
	<string name="snd_dog">Dog</string>
	<string name="no_alarm_sel">No Alarm</string>
	<string name="txt_empty"> </string>
	<string name="not_home">Not on home WiFi - Slow status update!</string>
	<string name="at_home">On home WiFi - Wait for status</string>
	<!--<string name="scan_impossible">Not on home WiFi - Cannot scan for devices!</string>-->
	<string name="cctv_impossible">Not on home WiFi - Cannot scan for cctv footage!</string>

	<string name="dot_txt_alarm_status">Alarm status</string>
	<string name="dot_txt_light">Light status</string>
	<string name="dot_txt_alarm">Alarm</string>
	<string name="sec_front">Status security front</string>
	<string name="sec_back">Status security back</string>
	<string name="sec_front_device">Frontyard</string>
	<string name="sec_back_device">Backyard</string>
	<string name="sec_auto_alarm_on">Alarm on from %1$s to %2$s</string>
	<string name="sec_auto_alarm_off">Manual alarm activ.</string>
	<string name="tv_sec_alarm_on">Activation time</string>
	<string name="tv_sec_alarm_off">Deactivation time</string>
	<string name="tv_set_alarm_txt">Set activation hours</string>
	<string name="sec_missing_app">CCTV viewer is not installed</string>
	<string name="bt_today_txt">Today</string>
	<string name="bt_history_txt">History</string>
	<string name="cctv_footage_info">Select footage to start playing</string>
	<string name="cctv_footage_wait">Wait for footage list</string>

	<string name="bt_prev_txt" translatable="false">&lt;&lt;</string>
	<string name="bt_next_txt" translatable="false">&gt;&gt;</string>
	<string name="bt_status_txt">Status</string>
	<string name="tv_result">Info</string>
	<string name="tv_sens1_curr_txt">SOLAR PV</string>
	<string name="tv_sens2_curr_txt">POWER NOW</string>
	<string name="tv_sens_value_txt" translatable="false">0000W</string>
	<string name="tv_result_txt_ex">EXPORTING</string>
	<string name="tv_result_txt_im">IMPORTING</string>
	<string name="cb_solar_txt">Solar</string>
	<string name="cb_cons_txt">Cons.</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="filesSynced">Sync successful</string>
	<string name="notif_export">Exporting %1$sW at %2$s</string>
	<string name="tv_widget_conf_txt">Select widget size</string>
	<string name="rb_large_txt">Large text</string>
	<string name="rb_small_txt">Small text</string>
	<string name="bt_place_txt">Add</string>
	<string name="tv_alarm_txt">Set alarm</string>
	<string name="dev_alarm_sel">Submarine</string>

	<string name="bt_txt_device_location">Office</string>
	<string name="bt_txt_power" translatable="false">POWER</string>
	<string name="bt_txt_fan_bar" translatable="false">FAN SPEED</string>
	<string name="bt_txt_fan_high" translatable="false">HIGH</string>
	<string name="bt_txt_fan_med" translatable="false">MED</string>
	<string name="bt_txt_fan_low" translatable="false">LOW</string>
	<string name="bt_txt_mode_bar" translatable="false">MODE</string>
	<string name="bt_txt_cool" translatable="false">COOL</string>
	<string name="bt_txt_dry" translatable="false">DRY</string>
	<string name="bt_txt_fan" translatable="false">FAN</string>
	<string name="bt_txt_turbo" translatable="false">TURBO</string>
	<string name="bt_txt_ion" translatable="false">ION</string>
	<string name="bt_txt_auto" translatable="false">AUTO</string>
	<string name="bt_txt_temp_bar" translatable="false">TEMP / TIMER</string>
	<string name="bt_txt_plus" translatable="false">+</string>
	<string name="bt_txt_minus" translatable="false">-</string>
	<string name="bt_txt_sweep" translatable="false">SWEEP</string>
	<string name="bt_txt_sleep" translatable="false">SLEEP</string>
	<string name="bt_txt_func_bar" translatable="false">FUNCTION</string>
	<string name="bt_txt_fanspeed" translatable="false">FANSPEED</string>
	<string name="txt_consumption">Consumption</string>
	<string name="txt_cool_temp">Temperature</string>
	<string name="txt_auto_status">Status</string>
	<string name="dialog_change_title">Enter location name and choose icon </string>
	<string name="dialog_change_icon">Select icon</string>
	<string name="dialog_selector_title">Select device to change</string>
	<string name="bt_txt_hour">HOUR</string>
	<string name="timer_on">TIMER ON</string>

	<string name="bt_txt_clear">Clear</string>
	<string name="bt_txt_find">SEARCH</string>

	<string name="weather_initial">--"C\n--%</string>

	<string name="lights_bedroom">Bedroom</string>
	<string name="lights_val_unknown">Unknown</string>
	<string name="lights_val_on">ON</string>
	<string name="lights_val_off">OFF</string>
	<string name="lights_val_dim">DIM</string>
	<string name="lights_backyard">Backyard</string>

	<string name="layout">"m"</string>

	<string name="tv_mqtt_status_txt">MQTT status</string>
	<string name="tv_mqtt_unknown_txt">0</string>
	<string name="tv_mqtt_bytes_txt">Recv/Sent bytes (avg):</string>
	<string name="tv_mqtt_msgs_txt">Recv/Sent topics (avg):</string>
	<string name="tv_mqtt_client_conn_txt">Connected clients:</string>
	<string name="tv_mqtt_client_list_txt">Clients:</string>

	<string name="tv_device_status_txt">Devices</string>
	<string name="txt_cmd_send">Send Command</string>
	<string name="title_activity_sec_cam_viewer">SecCamViewer</string>

    <string name="tv_wi_hdr_in">Inside</string>
    <string name="tv_wi_hdr_out">Outside</string>
    <string name="tv_wi_temp">20°C</string>
    <string name="tv_wi_humid">50%</string>

	<string name="buffer_msg">Loading data, please wait!</string>

	<string name="dev_stat_widget_name">Device Status</string>
	<string name="backyard_light_widget_name">Backyard light</string>
	<string name="cctv_widget_name">CCTV</string>
	<string name="bedroom_light_widget_name">Bedroom light</string>
	<string name="panic_widget_name">Panic button</string>
	<string name="aircon_widget_name">Aircon ctrl</string>
	<string name="lights_widget_name">Light button</string>
	<string name="solar_panel_widget_name">Solar panel monitor</string>
	<string name="alarm_widget_name">Alarm button</string>

</resources>
