<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/transparent"
	tools:ignore="KeyboardInaccessibleWidget">

	<ImageButton
		android:id="@+id/ib_light_off"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentStart="true"
		android:layout_centerVertical="true"
		android:background="@android:color/transparent"
		android:clickable="true"
		android:contentDescription="@string/lights_val_off"
		android:paddingEnd="5dp"
		android:paddingStart="16dp"
		android:src="@mipmap/ic_bulb_off" />

	<ImageButton
		android:id="@+id/ib_light_dim"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:background="@android:color/transparent"
		android:clickable="true"
		android:contentDescription="@string/lights_val_dim"
		android:src="@mipmap/ic_bulb_dim"/>

	<ImageButton
		android:id="@+id/ib_light_on"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentEnd="true"
		android:layout_centerVertical="true"
		android:background="@android:color/transparent"
		android:clickable="true"
		android:contentDescription="@string/lights_val_on"
		android:paddingEnd="16dp"
		android:paddingStart="5dp"
		android:src="@mipmap/ic_bulb_on"/>

	<TextView
		android:text="@string/lights_bedroom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tv_light_ctrl_widget"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/ib_light_dim"
		android:textSize="18sp"/>

</RelativeLayout>
