<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="tk.giesecke.myhomecontrol.MyHomeControl"
	tools:ignore="ButtonStyle, KeyboardInaccessibleWidget"
	android:id="@+id/view_devdebug"
	android:visibility="visible">
	<!--tools:showIn="@layout/activity_my_home_control"-->

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:layout_marginTop="5dp"
		android:focusableInTouchMode="true">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/bt_cmd_send"
			android:clickable="true"
			android:onClick="onClick"
			android:background="@android:color/holo_blue_bright"
			android:layout_gravity="center"
			android:text="@string/txt_cmd_send"
			android:textSize="12sp"
			android:layout_margin="5dp" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_txt_clear"
			android:id="@+id/bt_clear"
			android:clickable="true"
			android:onClick="onClick"
			android:background="@android:color/holo_orange_dark"
			android:layout_gravity="center"
			android:layout_margin="5dp"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/bt_txt_find"
			android:id="@+id/bt_highlight"
			android:clickable="true"
			android:onClick="onClick"
			android:background="@android:color/holo_orange_dark"
			android:layout_gravity="center"
			android:layout_margin="5dp"/>

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/et_highlight"
			android:inputType="textNoSuggestions"
			android:editable="true"
			android:imeOptions="actionSearch"
			android:descendantFocusability="beforeDescendants"
			android:focusableInTouchMode="true"
			tools:ignore="LabelFor" />

	</LinearLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dp"
		android:baselineAligned="false">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/sv_debugview"
			android:fadeScrollbars="false"
			android:layout_weight="1">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:id="@+id/tv_sv_debug"/>

		</ScrollView>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/rl_mqtt_status">

			<TextView
				android:text="@string/tv_mqtt_status_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_status"
				android:textAppearance="@android:style/TextAppearance.Large"
				android:textStyle="bold"/>

			<TextView
				android:text="@string/tv_mqtt_bytes_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_mqtt_status"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_bytes_avg"
				android:layout_below="@+id/tv_mqtt_status"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_msgs_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_mqtt_bytes_avg"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_msg_avg"
				android:layout_below="@+id/tv_mqtt_bytes_avg"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_client_conn_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_mqtt_msg_avg"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_client_conn"
				android:layout_below="@+id/tv_mqtt_msg_avg"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_client_list_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_client_list_hdr"
				android:layout_below="@+id/tv_mqtt_client_conn"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_client_list1"
				android:layout_below="@+id/tv_mqtt_client_list_hdr"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"
				/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_mqtt_client_list2"
				android:layout_below="@+id/tv_mqtt_client_list_hdr"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:layout_marginTop="5dp"
				android:textAlignment="viewEnd"
				android:gravity="end"/>

			<TextView
				android:text="@string/tv_device_status_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_device_status"
				android:textAppearance="@android:style/TextAppearance.Large"
				android:textStyle="bold"
				android:layout_below="@+id/tv_mqtt_client_list1"
				android:layout_marginTop="5dp"/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_device_name_list"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_marginTop="5dp"
				android:layout_below="@+id/tv_device_status"/>

			<TextView
				android:text="@string/tv_mqtt_unknown_txt"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/tv_device_ip_list"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:layout_below="@+id/tv_device_status"
				android:layout_alignParentRight="true"
				android:layout_alignParentEnd="true"
				android:layout_marginTop="5dp"/>

		</RelativeLayout>

	</LinearLayout>

</LinearLayout>
