<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:padding="@dimen/widget_margin"
				android:id="@+id/ac_widget"
				android:clickable="true">

	<ImageView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/iv_ac_wid_icon"
		android:src="@drawable/widget_aircon"
		android:contentDescription="@string/timer_on"
		android:background="@android:color/transparent"
		android:clickable="true"
		android:scaleType="centerCrop"/>

	<Button
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:text="@string/bt_txt_plus"
		android:id="@+id/bt_ac_wid_plus"
		android:clickable="true"
		android:enabled="true"
		android:textColor="#FFFFFF"
		android:background="@drawable/red_round_button"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_alignLeft="@+id/iv_ac_wid_icon"
		android:layout_alignStart="@+id/iv_ac_wid_icon"
		android:layout_alignBaseline="@+id/iv_ac_wid_icon"/>

	<Button
		android:layout_width="30dp"
		android:layout_height="30dp"
		android:text="@string/bt_txt_minus"
		android:id="@+id/bt_ac_wid_minus"
		android:clickable="true"
		android:enabled="true"
		android:textColor="#FFFFFF"
		android:background="@drawable/blue_round_button"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_alignRight="@+id/iv_ac_wid_icon"
		android:layout_alignEnd="@+id/iv_ac_wid_icon"
		android:layout_alignBaseline="@+id/iv_ac_wid_icon"/>

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="110dp"
		android:layout_height="30dp"
		android:text="@string/timer_on"
		android:id="@+id/bt_ac_wid_timer"
		android:clickable="true"
		android:layout_centerHorizontal="true"
		android:textColor="#FFFFFF"
		android:background="@drawable/orange_round_button"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:textAppearance="@android:style/TextAppearance.Small"
		android:layout_alignBottom="@+id/iv_ac_wid_icon"/>

</RelativeLayout>
