<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/hdr_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/tv_wi_hdr_in"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/hdr_out_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/tv_wi_hdr_out"
            android:textColor="@android:color/white" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/temp_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/tv_wi_temp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/temp_out_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/tv_wi_temp"
            android:textColor="@android:color/white" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <TextView
            android:id="@+id/hum_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/tv_wi_humid"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/hum_out_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:gravity="center"
            android:text="@string/tv_wi_humid"
            android:textColor="@android:color/white" />
    </TableRow>

</TableLayout>