<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:background="@android:color/transparent"
	android:padding="@dimen/widget_margin"
	android:clickable="true"
	tools:ignore="KeyboardInaccessibleWidget">

	<Button
		style="?android:attr/buttonStyleSmall"
		android:layout_width="wrap_content"
		android:layout_height="30dp"
		android:text="@string/timer_on"
		android:id="@+id/bt_ac_wid_timer"
		android:clickable="true"
		android:textColor="#FFFFFF"
		android:background="@drawable/orange_round_button"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:textAppearance="@android:style/TextAppearance.Small"
		android:layout_below="@+id/iv_ac_wid_icon"
		android:layout_alignEnd="@+id/bt_ac_wid_minus"
		android:layout_alignStart="@+id/bt_ac_wid_plus"/>

	<ImageView
		android:id="@+id/iv_ac_wid_icon"
		android:src="@drawable/wi_aircon"
		android:contentDescription="@string/timer_on"
		android:background="@android:color/transparent"
		android:clickable="true"
		android:scaleType="fitXY"
		android:layout_centerInParent="false"
		android:layout_alignParentTop="true"
		android:layout_toEndOf="@+id/bt_ac_wid_plus"
		android:layout_width="75dp"
		android:layout_height="75dp"/>

	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/bt_txt_minus"
		android:id="@+id/bt_ac_wid_minus"
		android:clickable="true"
		android:enabled="true"
		android:textColor="#FFFFFF"
		android:background="@mipmap/ic_blue_minus"
		android:contentDescription="@string/timer_on"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_alignParentTop="true"
		android:layout_toEndOf="@+id/iv_ac_wid_icon"
		/>

	<ImageView
		android:layout_width="wrap_content"
		android:text="@string/bt_txt_plus"
		android:id="@+id/bt_ac_wid_plus"
		android:clickable="true"
		android:enabled="true"
		android:textColor="#FFFFFF"
		android:background="@mipmap/ic_red_plus"
		android:contentDescription="@string/timer_on"
		android:shadowColor="#A8A8A8"
		android:shadowDx="0"
		android:shadowDy="0"
		android:shadowRadius="5"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentStart="true"
		android:baselineAlignBottom="false"/>

</RelativeLayout>
