<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:orientation="horizontal"
                android:id="@+id/view_lights"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

	<TextView
		android:text="@string/lights_bedroom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:id="@+id/tv_bedroom"
		android:textSize="40sp"
		android:gravity="center"/>

<!--	<tk.giesecke.myhomecontrol.BrightnessControl -->

	<SeekBar
		style="@style/Widget.AppCompat.SeekBar"
		android:layout_height="wrap_content"
		android:max="82"
		android:progress="41"
		android:id="@+id/sb_bedroom"
		android:progressDrawable="@drawable/dr_progress_drawable"
		android:layout_width="match_parent"
		android:paddingLeft="0dp"
		android:paddingRight="0dp"
		android:scrollbars="horizontal"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp"
		android:layout_marginStart="10dp"
		android:layout_marginEnd="10dp"
		android:layout_below="@+id/tv_bedroom"
		android:background="@android:color/transparent"
		android:thumb="@drawable/dr_thumb"/>

	<ImageButton
		android:layout_width="100dp"
		android:layout_height="100dp"
		app:srcCompat="@mipmap/ic_bulb_unavail"
		android:contentDescription="@string/sec_auto_alarm_off"
		android:id="@+id/ib_light_bed_dim"
		android:layout_centerVertical="true"
		android:scaleType="centerCrop"
		android:padding="-30dp"
		android:onClick="onClick"
		android:layout_centerHorizontal="true"
		android:layout_below="@+id/sb_bedroom"/>

	<ImageButton
		android:layout_width="100dp"
		android:layout_height="100dp"
		app:srcCompat="@mipmap/ic_bulb_unavail"
		android:contentDescription="@string/sec_auto_alarm_off"
		android:id="@+id/ib_light_bed_off"
		android:scaleType="centerCrop"
		android:padding="-30dp"
		android:onClick="onClick"
		android:layout_below="@+id/sb_bedroom"/>

	<ImageButton
		app:srcCompat="@mipmap/ic_bulb_unavail"
		android:contentDescription="@string/sec_auto_alarm_off"
		android:id="@+id/ib_light_bed_on"
		android:scaleType="centerCrop"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:padding="-30dp"
		android:onClick="onClick"
		android:layout_below="@+id/sb_bedroom"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"/>

	<TextView
		android:text="@string/lights_bedroom"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/tv_bedroom_value"
		android:textSize="40sp"
		android:gravity="center"
		android:layout_alignParentRight="true"
		android:layout_alignParentEnd="true"
		tools:ignore="RelativeOverlap"/>

	<Space
		android:layout_width="match_parent"
		android:layout_height="10dp"
		android:layout_below="@+id/ib_light_bed_dim"
		android:layout_centerHorizontal="true"
		android:id="@+id/space"/>

	<TextView
		android:id="@+id/tv_lanai"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/tb_byard_light"
		android:layout_alignTop="@+id/tb_byard_light"
		android:gravity="center"
		android:text="@string/lights_backyard"
		android:textSize="40sp"/>

	<ToggleButton
		android:id="@+id/tb_byard_light"
		android:layout_width="120dp"
		android:layout_height="120dp"
		android:layout_below="@+id/ib_light_bed_dim"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:background="@drawable/dr_toggle_lights"
		android:onClick="onClick"
		android:textOff=""
		android:textOn=""
		android:textSize="0sp"/>

</RelativeLayout>
